--- a/Html,css,js/Coding/Ownwebsite/style.css
+++ b/Html,css,js/Coding/Ownwebsite/style.css
@@ -4,12 +4,29 @@
     font-family: Candara;
 }
 
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab, yellow);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 50% 0%;
+    }
+    50% {
+        background-position: 50% 100%;
+    }
+    100% {
+        background-position: 50% 0%;
+    }
+}
+
 .main {
     width: 100%;
     height: 100vh;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(to right, #9c27b0, #8ecdff);
 }
 
 .nav-links {
@@ -23,10 +40,12 @@
 
 .logo {
     flex-basis: 20%;
+    display: absolute;
 }
 
 .logo img {
     width: 150px;
+    display: absolute;
 }
 
 .nav-links {
@@ -59,11 +78,11 @@
 
 #circle {
     margin-top: 25%;
-    width: 950px;
-    height: 950px;
+    width: 1000px;
+    height: 1000px;
     position: absolute;
     top: 0;
-    left: -7%;
+    left: -10%;
     border-radius: 50%;
     transform: rotate(0deg);
     transition: 1s;
@@ -114,7 +133,7 @@
 .mobile {
     width: 150px;
     position: absolute;
-    top: 70%;
+    top: 74%;
     left: 35%;
     transform: translateY(-50%);
     z-index: 1;
