--- a/Html,css,js/Coding/Ownwebsite/style.css
+++ b/Html,css,js/Coding/Ownwebsite/style.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: Candara;
+    box-sizing: border-box;
 }
 
 body {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab, yellow);
-    background-size: 400% 400%;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 500% 500%;
     animation: gradient 15s ease infinite;
 }
 
@@ -45,7 +46,9 @@ body {
 
 .logo img {
     width: 150px;
-    display: absolute;
+    position: absolute;
+    top: 0;
+    left: 15px;
 }
 
 .nav-links {
@@ -67,6 +70,11 @@ body {
     font-size: 20px;
 }
 
+.nav-links ul li a:hover {
+    color: black;
+    font-size: 28px;
+}
+
 .information {
     width: 1000px;
     height: 1000px;
@@ -86,11 +94,12 @@ body {
     border-radius: 50%;
     transform: rotate(0deg);
     transition: 1s;
+    z-index: -1;
 }
 
 .feature img {
     width: 70px;
-    border: 0;
+    border: 25px solid transparent;
 }
 
 .feature {
